I'm going to stop putting comments for the commits, I feel here, in this situation, they are worthless.